Fix twitch stream line height on Firefox

--- a/Vivelin.Home/wwwroot/css/_elements.scss
+++ b/Vivelin.Home/wwwroot/css/_elements.scss
@@ -140,7 +140,7 @@ dl.dialog {
     margin-right: $spacing;
     margin-bottom: $spacing;
     overflow: hidden;
-    line-height: 1.25;
+    line-height: 1.2;
 
     .twitchStream-thumbnail {
         width: $width;
