--- a/Vivelin.Home/wwwroot/css/site.css
+++ b/Vivelin.Home/wwwroot/css/site.css
@@ -196,7 +196,7 @@ dl.dialog dd:after {
   margin-right: 5px;
   margin-bottom: 5px;
   overflow: hidden;
-  line-height: 1.25; }
+  line-height: 1.2; }
   .twitchStream .twitchStream-thumbnail {
     width: 315px;
     height: 177.1875px; }
